infra/k8s/prefect-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prefect-ui
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: prefect-server-ui
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prefect-apollo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: prefect-server-apollo
              servicePort: 4200
